<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/note"
        android:title="@string/note" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/save_as"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/export"
        android:title="@string/export_counter"/>

</menu>