<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.fer.android.wicker.activities.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/selected"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/selected"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="italic"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/selected"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="46sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_symbol"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/subtract_symbol"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/btn_reset" />

            <Button
                android:id="@+id/btn_set_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_set_number" />

            <Button
                android:id="@+id/btn_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/btn_step" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
